@@ -187,6 +187,9 @@
       <name>Nathan Beyer</name>
     </contributor>
     <contributor>
+      <name>Emmanuel Bourg</name>
+    </contributor>
+    <contributor>
       <name>Chris Eldredge</name>
     </contributor>
     <contributor>
